Bugfix of events on IOS.

--- a/src/assets/styles/view-item.sass
+++ b/src/assets/styles/view-item.sass
@@ -8,6 +8,7 @@
   @media(max-width: 768px)
     width: 100%
     margin-top: 2vh
+    height: 30%
 
     &:hover
       background-color: #81a41b!important
